[gd_scene load_steps=7 format=3 uid="uid://bqbr8h3fckbpf"]

[ext_resource type="Theme" uid="uid://dyttrn2pjq2kk" path="res://assets/MainTheme.tres" id="1_25jy1"]
[ext_resource type="FontFile" uid="uid://7tdhnaelrkla" path="res://assets/IrishGrover-Regular.ttf" id="1_h6k0n"]
[ext_resource type="Script" path="res://main.gd" id="2_4t6x1"]
[ext_resource type="Texture2D" uid="uid://cqj5ov33360da" path="res://assets/snake.png" id="2_h7r3j"]
[ext_resource type="Texture2D" uid="uid://ddclbt36svbnx" path="res://assets/grass.svg" id="4_8aw2t"]

[sub_resource type="LabelSettings" id="LabelSettings_yxqrw"]
font_size = 48
font_color = Color(0.0823529, 1, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_25jy1")
script = ExtResource("2_4t6x1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 600.0
offset_bottom = 600.0
color = Color(0, 0.172549, 0.0666667, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -66.0
offset_top = 50.0
offset_right = 66.0
offset_bottom = 108.0
grow_horizontal = 2
text = "Snake"
label_settings = SubResource("LabelSettings_yxqrw")

[node name="Snake" type="Sprite2D" parent="."]
position = Vector2(488, 440)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_h7r3j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 136.0
offset_right = 418.0
offset_bottom = 294.0
metadata/_edit_group_ = true

[node name="Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h6k0n")
theme_override_font_sizes/font_size = 24
text = "Play"

[node name="Difficulty" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h6k0n")
theme_override_font_sizes/font_size = 24
text = "Difficulty"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h6k0n")
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="Grass" type="Sprite2D" parent="."]
position = Vector2(67, 576)
scale = Vector2(0.5, 0.40625)
texture = ExtResource("4_8aw2t")

[node name="Grass2" type="Sprite2D" parent="."]
position = Vector2(144, 560)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_8aw2t")

[node name="Grass3" type="Sprite2D" parent="."]
position = Vector2(256, 552)
scale = Vector2(0.6, 0.83125)
texture = ExtResource("4_8aw2t")

[node name="Grass4" type="Sprite2D" parent="."]
position = Vector2(336, 576)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8aw2t")

[node name="Grass5" type="Sprite2D" parent="."]
position = Vector2(440, 536)
scale = Vector2(0.7, 0.9125)
texture = ExtResource("4_8aw2t")

[node name="Grass7" type="Sprite2D" parent="."]
position = Vector2(544, 562)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_8aw2t")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
