extends Control


func _on_play_pressed() -> void:
	print("play")
	pass # Replace with function body.


func _on_difficulty_pressed() -> void:
	#open the difficulty menu
	$DifficultyDialog.visible = true
	
	
	pass # Replace with function body.


func _on_exit_pressed() -> void:
	pass # Replace with function body.
